--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "aws-sdk": "^2.1691.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
   },
   "name": "sqs",
   "version": "1.0.0",
   "main": "producer.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
